--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.5",
     "@reduxjs/toolkit": "^2.5.0",
     "@tailwindcss/vite": "^4.0.0",
     "axios": "^1.7.9",
-    "bcryptjs": "^2.4.3",
     "firebase": "^11.2.0",
     "framer-motion": "^12.0.6",
+    "libphonenumber-js": "^1.11.19",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-firebase-hooks": "^5.1.1",
+    "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
@@ -28,10 +30,10 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
-    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^22.10.10",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "@types/react-google-recaptcha": "^2.1.9",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
